# bios

./: .gitignore  CHANGELOG.adoc  CHANGELOG.md  CNAME  CONTRIBUTING.adoc  COPYRIGHT  Cargo.toml  Makefile.toml  README.adoc  README.md  README_CN.md  REVIEW_AUTH_IAM_2026-04-18.md  clippy.toml  pom.xml  rustfmt.toml
baas/modules/iam/: Cargo.toml
baas/services/baas-all/: Cargo.toml
backend/basic/: Cargo.toml
backend/basic/src/: dto.rs  enumeration.rs  helper.rs  lib.rs  process.rs  rbum.rs  spi.rs  test.rs
backend/basic/tests/: test_rbum.rs  test_rbum_cert.rs  test_rbum_domain.rs  test_rbum_event.rs  test_rbum_item.rs  test_rbum_kind.rs  test_rbum_rel.rs  test_rbum_set.rs  test_task_processor.rs
basic/: Cargo.toml
basic/src/: basic_enumeration.rs  dto.rs  enumeration.rs  helper.rs  lib.rs  process.rs  rbum.rs  spi.rs  test.rs
basic/src/helper/: bios_ctx_helper.rs  db_helper.rs  request_helper.rs  url_helper.rs
basic/src/process/: ci_processor.rs  task_processor.rs
basic/src/rbum/: constants.rs  dto.rs  enumeration.rs  helper.rs  initializer.rs  rbum_config.rs  rbum_constants.rs  rbum_enumeration.rs  rbum_initializer.rs  serv.rs
basic/src/spi/: api.rs  domain.rs  dto.rs  macros.rs  serv.rs  spi_constants.rs  spi_enumeration.rs  spi_funs.rs  spi_initializer.rs
basic/src/test/: init_rbum_test_container.rs  test_http_client.rs
basic/tests/: test_basic.rs  test_rbum.rs  test_rbum_cert.rs  test_rbum_domain.rs  test_rbum_event.rs  test_rbum_item.rs  test_rbum_kind.rs  test_rbum_rel.rs  test_rbum_scope_helper.rs  test_rbum_set.rs  test_scope.rs
basic/tests/config/: conf-default.toml
clients/hwsms/: Cargo.toml
clients/hwsms/src/: lib.rs
core/auth/: Cargo.toml
core/auth/src/: auth_config.rs  auth_constants.rs  auth_initializer.rs  helper.rs  lib.rs  serv.rs
core/auth/tests/: init_cache_container.rs  test_auth.rs  test_auth_init.rs  test_auth_match.rs  test_auth_req.rs
core/iam/: Cargo.toml
core/iam/src/: basic.rs  console_interface.rs  constants.rs  controller.rs  domain.rs  dto.rs  enumeration.rs  iam.rs  iam_config.rs  iam_constants.rs  iam_enumeration.rs  iam_initializer.rs  iam_test_helper.rs  initializer.rs  integration.rs  lib.rs  rbum.rs  service.rs
core/iam/tests/: test_basic.rs  test_ca_account.rs  test_ca_app.rs  test_ca_basic.rs  test_ca_http_res.rs  test_ca_role.rs  test_ca_set.rs  test_cc_account.rs  test_cc_attr.rs  test_cc_cert.rs  test_cc_cert_conf.rs  test_cc_res.rs  test_cc_role.rs  test_cc_set.rs  test_cp_all.rs  test_cs_account.rs  test_cs_tenant.rs  test_ct_account.rs  test_ct_app.rs  test_ct_basic.rs  test_ct_ca_attr.rs  test_ct_cert.rs  test_ct_cert_conf.rs  test_ct_http_res.rs  test_ct_res.rs  test_ct_role.rs  test_ct_set.rs  test_ct_tenant.rs  test_iam.rs  test_iam_api.rs  test_iam_oauth2.rs  test_iam_scenes.rs  test_iam_scenes_app.rs  test_iam_scenes_common.rs  test_iam_scenes_passport.rs  test_iam_scenes_system.rs  test_iam_scenes_tenant.rs  test_iam_serv.rs  test_key_cache.rs  test_rbum.rs  (+1 more)
framework/: Cargo.toml  readme.adoc
framework/examples/cache/: Cargo.toml
framework/examples/mq/: Cargo.toml
framework/examples/reldb/: Cargo.toml
framework/examples/todo-list/: Cargo.toml
framework/examples/todos/: Cargo.toml
framework/examples/web-basic/: Cargo.toml
framework/examples/web-client/: Cargo.toml
framework/src/: lib.rs
framework/src/basic/: config.rs  dto.rs  error.rs  field.rs  json.rs  logger.rs  mod.rs  result.rs  security.rs  uri.rs
framework/src/cache/: cache_client.rs  mod.rs
framework/src/db/: basic_dto.rs  domain.rs  mod.rs  reldb_client.rs  reldb_client_mysql.rs  reldb_client_postgres.rs
framework/src/mq/: mod.rs  mq_client.rs
framework/src/test/: mod.rs  test_container.rs
framework/src/web/: basic_processor.rs  error_handler.rs  mod.rs  resp_handler.rs  web_client.rs  web_resp.rs  web_server.rs  web_validation.rs
framework/tests/: basic.rs  test_basic_config.rs  test_basic_error.rs  test_basic_field.rs  test_basic_json.rs  test_basic_logger.rs  test_basic_security.rs  test_basic_uri.rs  test_cache_client.rs  test_mq_client.rs  test_reldb_client.rs  test_web_client.rs  test_web_server.rs
framework/tests/log/: log-test.yaml
framework/tests/sql/: CreateTable.sql  InsertData.sql
gateway/spacegate-lib/: Cargo.toml
gateway/spacegate-lib/schema/: anti_replay.json  audit_log.json
gateway/spacegate-lib/src/: consts.rs  extension.rs  lib.rs  marker.rs  plugin.rs
gateway/spacegate-lib/tests/: export_schemas.rs
gateway/spacegateway/: Cargo.toml
gateway/spacegateway/res/: gatewayclass.yaml
gateway/spacegateway/src/: main.rs  plugin.rs
gateway/test/: Cargo.toml
gateway/test/src/: http_backend.rs  init_apisix.rs  main.rs
middleware/event/: Cargo.toml
middleware/event/src/: api.rs  dto.rs  event_config.rs  event_constants.rs  event_initializer.rs  lib.rs  serv.rs
middleware/event/test-vue/: index.html  package-lock.json  package.json
middleware/event/tests/: test_event.rs  test_event_inmails.rs  test_event_multi_node_server.rs  test_event_with_event_code.rs  test_event_with_im.rs  test_event_without_mgr.rs  test_inmails.rs
middleware/flow/: Cargo.toml
middleware/flow/src/: api.rs  domain.rs  dto.rs  event.rs  flow_config.rs  flow_constants.rs  flow_initializer.rs  lib.rs  serv.rs
middleware/flow/tests/: mock_api.rs  test_flow_api.rs  test_flow_scenes_fsm.rs
sdk/invoke/: Cargo.toml
sdk/invoke/src/: clients.rs  invoke_config.rs  lib.rs  (+2 more)
services/bios-all/: Cargo.toml  Dockerfile  readme.adoc
services/spacegate/: Cargo.toml  Dockerfile
services/spi-all/: Cargo.toml  Dockerfile
services/spi-conf/: Cargo.toml  Dockerfile  readme.adoc
spi/spi-cache/: Cargo.toml
spi/spi-conf/: Cargo.toml  build.rs  fmt_and_fix.sh
spi/spi-object/: Cargo.toml
spi/spi-reach/: Cargo.toml
spi/spi-reldb/: Cargo.toml
spi/spi-search/: Cargo.toml
spi/spi-stats/: Cargo.toml
support/auth/: Cargo.toml
support/enhance-wasm/: Cargo.toml  index.js  package-lock.json  package.json  readme.md  test.html  webpack.config.js
support/iam/: Cargo.toml
support/reach/: Cargo.toml
(+2238 files in other folders)
