[workspace]

members = [
    "backend/basic",
    # "backend/spi/*",
    "backend/spi/spi-cache",
    "backend/spi/spi-search",
    "backend/spi/spi-graph",
    "backend/spi/spi-kv",
    "backend/spi/spi-log",
    "backend/spi/spi-object",
    "backend/spi/spi-plugin",
    "backend/spi/spi-stats",
    "backend/spi/spi-reldb",
    "backend/gateway/test",
    "backend/gateway/spacegate-lib",
    "backend/middleware/*",
    "backend/support/iam",
    "backend/support/auth",
    "backend/support/enhance-wasm",
    "backend/support/reach",
    "backend/services/*",
    "frontend/sdk/*",
    "clients/*",
]
resolver = "2"
[workspace.package]
version = "0.1.0"
authors = [
    "gudaoxuri <i@sunisle.org>",
    "hermitCode <17743125563@163.com>",
    "RWDai <rwdai@foxmail.com>",
]
homepage = "https://bios.idealworld.group"
documentation = "https://bios.idealworld.group"
repository = "https://github.com/ideal-world/bios"
license = "Apache-2.0"
edition = "2021"
readme = "README.adoc"
publish = false

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = true

[workspace.dependencies]
# basic
async-recursion = { version = "1.0.4" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
async-trait = { version = "0.1" }
lazy_static = { version = "1" }
itertools = { version = "0" }
fancy-regex = { version = "0" }
run_script = { version = "0.10" }
testcontainers-modules = { version = "0.3", features = ["redis"] }
strum = { version = "0.26", features = ["derive"] }
# tardis
tardis = { version = "0.1.0-rc.11" }
# tardis = { path = "../tardis/tardis" }
# tardis = { git = "https://github.com/ideal-world/tardis.git", rev = "191f3ec" }
#spacegate

# spacegate-kernel = { git = "https://github.com/ideal-world/spacegate.git", rev = "f37a81a", features = [
#   "ws",
#   "cache",
#   "k8s",
# ] }
# spacegate-shell = { path = "../spacegate/shell", features = [
#   "cache",
#   "k8s",
#   "ext-redis",
#   "ext-axum",
# ] }
spacegate-shell = { git = "https://github.com/ideal-world/spacegate.git", branch = "master", features = [
    "cache",
    "k8s",
    "ext-redis",
    "ext-axum",
] }

spacegate-plugin = { git = "https://github.com/ideal-world/spacegate.git", branch = "master" }
