[workspace]

#resolver = "2"

members = [
  "backend/basic",
  # "backend/spi/*",
  "backend/spi/spi-cache",
  "backend/spi/spi-search",
  "backend/spi/spi-graph",
  "backend/spi/spi-kv",
  "backend/spi/spi-log",
  "backend/spi/spi-object",
  "backend/spi/spi-plugin",
  "backend/spi/spi-stats",
  "backend/spi/spi-reldb",
  "backend/gateways/spacegate-plugins",
  "backend/middlewares/*",
  "backend/supports/iam",
  "backend/supports/auth",
  "frontend/enhance-wasm",
  "backend/supports/reach",
  "backend/services/*",
  "frontend/sdks/*",
  "frontend/clients/*",
]
resolver = "2"
[workspace.package]
version = "0.1.0"
authors = [
  "gudaoxuri <i@sunisle.org>",
  "hermitCode <17743125563@163.com>",
  "RWDai <rwdai@foxmail.com>",
]
homepage = "https://bios.idealworld.group"
documentation = "https://bios.idealworld.group"
repository = "https://github.com/ideal-world/bios"
license = "Apache-2.0"
edition = "2021"
readme = "README.md"
publish = false

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = true

[workspace.dependencies]
# basic
async-recursion = { version = "1.0.4" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
async-trait = { version = "0.1" }
lazy_static = { version = "1" }
itertools = { version = "0" }
fancy-regex = { version = "0" }
run_script = { version = "0.10" }
rust_decimal = { version = "1" }
rust_decimal_macros = { version = "1" }
testcontainers-modules = { version = "0.11", features = ["redis"] }
strum = { version = "0.26", features = ["derive"] }
# tardis
tardis = { version = "0.1.0-rc.17" }
# tardis = { path = "../tardis/tardis" }
# tardis = { git = "https://github.com/ideal-world/tardis.git", rev = "9cc9b3e" }
# asteroid-mq = { git = "https://github.com/4t145/asteroid-mq.git", rev = "d59c64d" }
asteroid-mq = { git = "https://github.com/4t145/asteroid-mq.git", rev = "83a6643" }
asteroid-mq-sdk = { git = "https://github.com/4t145/asteroid-mq.git", rev = "83a6643" }
#spacegate

# spacegate-shell = { path = "../spacegate/crates/shell", features = [
#   "cache",
#   "k8s",
#   "ext-axum",
# ] }
spacegate-shell = { git = "https://github.com/ideal-world/spacegate.git", branch = "master", features = [
  "cache",
  "k8s",
  "ext-axum",
] }
