[workspace]

#resolver = "2"

members = [
  "backend/basic", # "backend/spi/*",
  "backend/spi/spi-cache",
  "backend/spi/spi-search",
  "backend/spi/spi-graph",
  "backend/spi/spi-kv",
  "backend/spi/spi-log",
  "backend/spi/spi-object",
  "backend/spi/spi-plugin",
  "backend/spi/spi-stats",
  "backend/spi/spi-reldb",
  "backend/gateways/spacegate-plugins",
  "backend/middlewares/*",
  "backend/supports/iam",
  "backend/supports/auth",
  "frontend/enhance-wasm",
  "backend/supports/reach",
  "backend/services/*",
  "frontend/sdks/*",
  "frontend/clients/*",
]
resolver = "2"
[workspace.package]
authors = [
  "gudaoxuri <i@sunisle.org>",
  "hermitCode <17743125563@163.com>",
  "RWDai <rwdai@foxmail.com>",
]
description = "An embeddable message queue system"
documentation = "https://bios.idealworld.group"
edition = "2021"
homepage = "https://bios.idealworld.group"
license = "Apache-2.0"
publish = true
readme = "README.md"
repository = "https://github.com/ideal-world/bios"
version = "0.2.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[workspace.dependencies]
# basic
async-recursion = {version = "1.0.4"}
async-trait = {version = "0.1"}
fancy-regex = {version = "0"}
itertools = {version = "0.13"}
lazy_static = {version = "1"}
run_script = {version = "0.10"}
rust_decimal = {version = "1"}
rust_decimal_macros = {version = "1"}
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1"}
strum = {version = "0.26", features = ["derive"]}
testcontainers-modules = {version = "0.11", features = ["redis"]}
# tardis
# tardis = { version = "0.1.0-rc.17" }
# tardis = { version = "0.2.0", path = "../tardis/tardis" }
tardis = {git = "https://gitee.com/ideal-world/tardis.git", rev = "aeb4c85"}
# asteroid-mq = { git = "https://github.com/4t145/asteroid-mq.git", rev = "f1412ce" }
# asteroid-mq = { path = "../asteroid/asteroid-mq/server" }
asteroid-mq = {version = "0.1.0-alpha.15"}
# asteroid-mq-sdk = { git = "https://github.com/4t145/asteroid-mq.git", rev = "f1412ce" }
# asteroid-mq-sdk = { path = "../asteroid/asteroid-mq/sdk/rust"  }
asteroid-mq-sdk = {version = "0.1.0-alpha.15"}
#spacegate

# spacegate-shell = { version = "0.2.0-alpha.2", path = "../spacegate/crates/shell", features = [
#   "cache",
#   "k8s",
#   "ext-axum",
# ] }
# spacegate-shell = { git = "https://github.com/ideal-world/spacegate.git", rev="cb8dd86", features = [
#   "cache",
#   "k8s",
#   "ext-axum",
# ] }
spacegate-shell = {version = "0.2.0-alpha.3", features = [
  "cache",
  "k8s",
  "ext-axum",
]}

csrf = "=0.4.1"
