[package]
name = "bios-basic"
version = "0.1.0"
authors = ["gudaoxuri <i@sunisle.org>"]
homepage = "https://bios.idealworld.group"
documentation = "https://bios.idealworld.group"
repository = "https://github.com/ideal-world/bios"
license = "Apache-2.0"
edition = "2021"
readme = "README.adoc"
publish = false

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"

[lib]
name = "bios_basic"
path = "src/lib.rs"

[features]
default = [
    "tardis",
    "tardis/crypto",
    "tardis/web-server",
    "tardis/web-client",
    "tardis/reldb",
    "tardis/cache",
    "tardis/reldb",
]
with-mq = ["tardis/mq"]
sdk = ["tardis", "tardis/web-client"]

[dependencies]
serde = { version = "1", features = ["derive"] }
async-trait = { version = "0.1" }
lazy_static = { version = "1" }
itertools = { version = "0" }
fancy-regex = { version = "0" }
tardis = { version = "0.1.0-alpha26", optional = true }

[dev-dependencies]
tardis = { version = "0.1.0-alpha26", features = ["test", "reldb", "sea-orm"] }

[[test]]
name = "test_rbum"
required-features = ["default", "with-mq"]
