[package]
name = "bios-basic"
version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
publish.workspace = true

[lib]
name = "bios_basic"
path = "src/lib.rs"

[features]
default = [
    "tardis",
    "tardis/crypto",
    "tardis/web-server",
    "tardis/web-client",
    "tardis/reldb-postgres",
    "tardis/cache",
    "tardis/mq",
]
# TODO remvoe
with-mq = ["tardis/mq"]
sdk = ["tardis", "tardis/web-client"]
test = ["tardis/test"]

[dependencies]
serde.workspace = true
async-trait.workspace = true
lazy_static.workspace = true
itertools.workspace = true
fancy-regex.workspace = true
tardis = { workspace = true, optional = true }
strum = { workspace = true }
testcontainers-modules ={ workspace = true }
bios-sdk-invoke = { path = "../sdk/invoke", features = ["default"] }
[dev-dependencies]
tardis = { workspace = true, features = ["test"] }
bios-sdk-invoke = { path = "../sdk/invoke", features = ["default"] }
[[test]]
name = "test_rbum"
required-features = ["default", "with-mq", "test"]
