[package]
name = "bios-framework"
version = "0.1.0"
authors = ["gudaoxuri"]
description = "BIOS project foundation framework"
keywords = ["bios", "http", "web", "framework", "async"]
categories = [
    "network-programming",
    "asynchronous",
    "web-programming::http-server",
    "web-programming::websocket"
]
homepage = "https://bios.idealworld.group/framework"
repository = "https://github.com/ideal-world/bios"
license = "Apache-2.0"
edition = "2018"
exclude = ["/.travis.yml"]
readme = "README.adoc"

[profile.release]
lto = true
codegen-units = 1

[lib]
name = "bios"
path = "src/lib.rs"

[features]
default = ["rslog", "web-server"]

web-server = ["actix-web", "actix-http", "actix-service", "actix-cors", "validator", "actix-router", "mime", "serde_qs", "serde_urlencoded"]

web-client = ["awc", "actix-http"]


[dependencies]
# Basic
chrono = { version = "^0", features = ["serde"] }
rust_decimal = { version = "^1" }
async-trait = "^0"

[dev-dependencies]
# Common
tokio = { version = "^1", features = ["time", "rt", "macros"] }
actix-rt = "^2"
http = "0.2.5"

[[test]]
name = "test_web_server"
required-features = ["test", "web-client"]

[[test]]
name = "test_web_client"
required-features = ["test", "web-client"]



[[test]]
name = "test_reldb_client"
required-features = ["test", "reldb"]
