[package]
name = "bios-basic"
version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
publish.workspace = true
description.workspace = true

[lib]
name = "bios_basic"
path = "src/lib.rs"

[features]
default = []
# TODO remvoe
with-mq = ["tardis/mq", "bios-sdk-invoke", "bios-sdk-invoke/event"]
sdk = ["tardis/web-client"]
test = ["tardis/test", "testcontainers-modules"]

[dependencies]
serde.workspace = true
async-trait.workspace = true
async-recursion.workspace = true
lazy_static.workspace = true
itertools.workspace = true
fancy-regex.workspace = true
tardis = { workspace = true, features = ["crypto", "reldb-postgres", "cache", "web-server", "web-client"] }
strum = { workspace = true }
testcontainers-modules = { workspace = true, features = ["redis"], optional = true  }
bios-sdk-invoke = { version = "0.2.0", path = "../../frontend/sdks/invoke", features = ["default"], optional = true }

[dev-dependencies]
tardis = { workspace = true, features = ["test"] }
bios-sdk-invoke = { version = "0.2.0", path = "../../frontend/sdks/invoke", features = ["default"] }

[[test]]
name = "test_rbum"
required-features = ["default", "with-mq", "test"]
