[package]
name = "bios-client-hwsms"
version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["reach"]
reach = ["bios-reach"]
[dependencies]
serde.workspace = true
tardis = { workspace = true }
bios-reach = { optional = true, path = "../../support/reach" }
