[package]
name = "bios-iam"
version = "0.1.0"
authors = ["gudaoxuri <i@sunisle.org>"]
homepage = "https://bios.idealworld.group"
documentation = "https://bios.idealworld.group"
repository = "https://github.com/ideal-world/bios"
license = "Apache-2.0"
edition = "2021"
readme = "README.adoc"
publish = false

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"

[lib]
name = "bios_iam"
path = "src/lib.rs"

[dependencies]
serde = { version = "^1", features = ["derive"] }
derive_more = { version = "^0" }
async-trait = { version = "^0" }
lazy_static = { version = "^1" }
itertools = { version = "^0" }

bios-basic = { path = "../../basic", features = ["default", "with-mq"] }
# TODO
tardis = { path = "../../../tardis", features = ["reldb", "cache", "mq", "web-server", "web-client", "mail"] }
poem-openapi = { version = "^2", features = ["chrono"] }
sea-orm = { version = "^0.8", features = ["macros"] }

[dev-dependencies]
# TODO
tardis = { path = "../../../tardis", features = ["test"] }
