[package]
name = "bios-iam"
version = "0.1.0"
authors = ["gudaoxuri <i@sunisle.org>"]
homepage = "https://bios.idealworld.group"
documentation = "https://bios.idealworld.group"
repository = "https://github.com/ideal-world/bios"
license = "Apache-2.0"
edition = "2021"
readme = "README.adoc"
publish = false

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"

[lib]
name = "bios_iam"
path = "src/lib.rs"

[features]
ldap = ["ldap3_proto", "tardis/future", "tokio-util"]

[dependencies]
serde = { version = "1", features = ["derive"] }
async-trait = { version = "0" }
lazy_static = { version = "1" }
itertools = { version = "0" }
tardis = { version = "0.1.0-alpha18", features = ["reldb", "cache", "mq", "web-server", "web-client", "mail"] }
bios-basic = { path = "../../basic", features = ["default", "with-mq"] }

# ldap
ldap3_proto = { version = "0.2.3", optional = true }
tokio-util = { version = "0.7", optional = true }

[dev-dependencies]
tardis = { version = "0.1.0-alpha18", features = ["test"] }
