[package]
name = "bios-iam"
version = "0.1.0"
authors = ["gudaoxuri <i@sunisle.org>"]
homepage = "https://bios.idealworld.group"
documentation = "https://bios.idealworld.group"
repository = "https://github.com/ideal-world/bios"
license = "Apache-2.0"
edition = "2021"
readme = "README.adoc"
publish = false

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"

[lib]
name = "bios_iam"
path = "src/lib.rs"

[features]
default = ["ldap_server", "ldap_client"]
ldap_server = ["ldap3_proto", "tardis/future", "tokio-util"]
ldap_client = ["ldap3"]

[dependencies]
serde = { version = "1", features = ["derive"] }
async-trait = { version = "0" }
lazy_static = { version = "1" }
itertools = { version = "0" }
tardis = { version = "0.1.0-alpha32", features = [
    "reldb-postgres",
    "cache",
    "mq",
    "web-server",
    "web-client",
    "mail",
] }
bios-basic = { path = "../../basic", features = ["default", "with-mq"] }

# ldap
ldap3_proto = { version = "0.2.3", optional = true }
tokio-util = { version = "0.7", optional = true }
ldap3 = { version = "0.10.5", optional = true }

[dev-dependencies]
tardis = { version = "0.1.0-alpha32", features = ["test"] }
bios-basic = { path = "../../basic", features = ["default", "test"] }
