[package]
name = "spacegateway"
version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true

spacegate-kernel = { version = "0.1.0-alpha.2", features = [
    "ws",
    "cache",
    "k8s",
    "web",
], path = "../../../spacegate/kernel" }
bios-auth = { path = "../../support/auth" }
tardis = { workspace = true, features = ["web-server", "web-client"] }
