[package]
name = "spacegateway"
version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
lazy_static.workspace = true
bios-sdk-invoke = { path = "../../sdk/invoke", features = ["spi_log"] }

 spacegate-kernel = { version = "0.1.0-alpha.4", features = [
     "ws",
     "cache",
     "k8s",
 ] }
#  spacegate-kernel = { git = "https://github.com/ideal-world/spacegate.git", features = [
#    "ws",
#    "cache",
#    "k8s",
# ] }
# spacegate-kernel = { path = "../../../spacegate/kernel", features = [
#    "ws",
#    "cache",
#    "k8s",
# ] }

jsonpath-rust = "0.3.1"
bios-auth = { path = "../../support/auth" }
tardis = { workspace = true, features = ["web-server", "web-client"] }
ipnet = "2.8.0"
[dev-dependencies]
tardis = { workspace = true, features = ["test", "web-client"] }

tracing-subscriber = { version = "0.3", features = ["env-filter"] }
