[package]
name = "bios-gateway-test"
version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
publish.workspace = true

[features]
default = ["tardis", "tardis/web-server", "tardis/web-client", "tardis/crypto", "tardis/test"]

[dependencies]
serde.workspace = true
run_script.workspace = true
tardis = { workspace = true, optional = true }