[package]
name = "bios-mw-event"
version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
publish.workspace = true

[lib]
name = "bios_mw_event"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
async-trait.workspace = true
lazy_static.workspace = true
tardis = { workspace = true, features = [
    "reldb-postgres",
    "web-server",
    "ws-client",
    "cluster",
] }
bios-basic = { path = "../../basic", features = ["default"] }
bios-sdk-invoke = { path = "../../sdk/invoke", features = [
    "spi_log",
    "event",
], default-features = false }
[dev-dependencies]
tardis = { workspace = true, features = [
    "test",
    "ws-client",
    "cluster",
    "web-server",
] }
bios-basic = { path = "../../basic", features = ["default", "test"] }
tokio = { version = "1", features = ["full"] }
