[package]
name = "bios-mw-flow"
version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
publish.workspace = true

[lib]
name = "bios_mw_flow"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
lazy_static.workspace = true
itertools.workspace = true
tardis = { workspace = true, features = ["reldb-postgres", "web-client"] }
bios-basic = { path = "../../basic", features = ["default"] }

[dev-dependencies]
tardis = { workspace = true, features = ["test", "web-client"] }
bios-basic = { path = "../../basic", features = ["default", "test"] }
