[package]
name = "bios-sdk-invoke"
version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
publish.workspace = true

[lib]
name = "bios_sdk_invoke"
path = "src/lib.rs"

[features]
default = ["spi_kv", "spi_log", "spi_search"]
spi_kv = []
spi_log = []
spi_search = []

[dependencies]
serde.workspace = true
lazy_static.workspace = true
itertools.workspace = true
tardis = { workspace = true, features = ["web-server"] }
[dev-dependencies]
tardis = { workspace = true, features = ["test"] }
