[package]
name = "bios-sdk-invoke"
version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
publish.workspace = true

[lib]
name = "bios_sdk_invoke"
path = "src/lib.rs"

[features]
default = ["spi-kv", "spi-log", "spi-search", "iam"]
spi-base = []
spi-kv = ["spi-base"]
spi-log = ["spi-base"]
spi-search = ["spi-base"]
iam = ["dep:bios-iam"]

[dependencies]
serde.workspace = true
lazy_static.workspace = true
itertools.workspace = true
tardis = { workspace = true, features = ["web-server"] }
bios-iam = { path = "../../support/iam", optional = true }

[dev-dependencies]
tardis = { workspace = true, features = ["test"] }
