[package]
name = "bios-sdk-invoke"
version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
publish.workspace = true

[lib]
name = "bios_sdk_invoke"
path = "src/lib.rs"

[features]
default = ["spi_kv", "spi_log", "spi_search", "iam", "event"]
spi_base = []
spi_kv = ["spi_base"]
spi_log = ["spi_base"]
spi_search = ["spi_base"]
iam = []
event = []
macro = ["dep:simple-invoke-client-macro"]
reldb-core = ["tardis/reldb-core"]

[dependencies]
serde.workspace = true
lazy_static.workspace = true
itertools.workspace = true
tardis = { workspace = true, features = [
  "web-server",
  "web-client",
  "crypto",
  "ws-client",
] }
simple-invoke-client-macro = { path = "../simple-invoke-client-macro", optional = true }
[dev-dependencies]
tardis = { workspace = true, features = ["test"] }
simple-invoke-client-macro = { path = "../simple-invoke-client-macro" }


[[test]]
name = "test_macros"
features = ["macro"]
