[package]
name = "bios-serv-all"
version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
tardis = { workspace = true, features = [
    "web-server",
    "conf-remote",
    "reldb-mysql",
] }
bios-iam = { path = "../../support/iam" }
bios-auth = { path = "../../support/auth" }
