[package]
name = "bios-serv-all"
version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
tardis = { workspace = true, features = ["web-server", "conf-remote"] }
bios-iam = { path = "../../support/iam", features = ["spi_search", "spi_kv"] }
bios-auth = { path = "../../support/auth", features = ["web-server"] }
bios-reach = { path = "../../support/reach" }

bios-spi-cache = { path = "../../spi/spi-cache" }
bios-spi-graph = { path = "../../spi/spi-graph" }
bios-spi-kv = { path = "../../spi/spi-kv" }
bios-spi-log = { path = "../../spi/spi-log" }
bios-spi-object = { path = "../../spi/spi-object" }
bios-spi-plugin = { path = "../../spi/spi-plugin" }
bios-spi-reldb = { path = "../../spi/spi-reldb" }
bios-spi-search = { path = "../../spi/spi-search" }
bios-spi-stats = { path = "../../spi/spi-stats" }
bios-spi-conf = { path = "../../spi/spi-conf" }

bios-mw-schedule = { path = "../../middleware/schedule" }
bios-mw-flow = { path = "../../middleware/flow" }

# clients
bios-client-hwsms = { path = "../../clients/hwsms", features = ["reach"] }
