[package]
name = "bios-spacegate"
version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
lazy_static.workspace = true
spacegate-shell.workspace = true
tardis.workspace = true
spacegate-lib = { path = "../../gateway/spacegate-lib" }
envy = "0.4"
[dev-dependencies]
pprof = { version = "0.12.1", features = ["flamegraph"] }
tardis = { workspace = true, features = ["test", "web-client"] }

tracing-subscriber = { version = "0.3", features = ["env-filter"] }
