[package]
name = "bios-spi-cache"
version = "0.1.0"
authors = ["gudaoxuri <i@sunisle.org>"]
homepage = "https://bios.idealworld.group"
documentation = "https://bios.idealworld.group"
repository = "https://github.com/ideal-world/bios"
license = "Apache-2.0"
edition = "2021"
readme = "README.adoc"
publish = false

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"

[lib]
name = "bios_spi_cache"
path = "src/lib.rs"

[features]
default = ["spi-redis"]
spi-redis = ["tardis/cache"]

[dependencies]
serde = { version = "1", features = ["derive"] }
tardis = { version = "0.1.0-alpha32", features = [
    "reldb-postgres",
    "web-server",
] }
bios-basic = { path = "../../basic", features = ["default"] }

[dev-dependencies]
tardis = { version = "0.1.0-alpha32", features = ["test"] }
bios-basic = { path = "../../basic", features = ["default", "test"] }
